tests/error/modifier_errors/custom_ctrl_daggered_signature.err
Error: Expected signature compatible with qubit -> None (at $FILE:13:4)
   | 
11 | 
12 |     @guppy
13 |     def call_ctrl_daggered(q: int, controls: array[qubit, 2]) -> None:
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |         pass
   | ^^^^^^^^^^^^ Expected signature compatible with qubit -> None

Guppy compilation failed due to 1 previous error
